--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <title>React Messenger</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
